Added linear acceleration sensor support

--- a/templates/sensors_basic.html
+++ b/templates/sensors_basic.html
@@ -15,6 +15,11 @@
       <li id="gyroscope-y"></li>
       <li id="gyroscope-z"></li>
     </ul>
+    <ul>
+      <li id="acceleration-x"></li>
+      <li id="acceleration-y"></li>
+      <li id="acceleration-z"></li>
+    </ul>
     <script src="{{ url_for('static', filename='js/sensors_basic.js') }}"></script>
   </body>
 </html>
